#42624 Quote by time format alignment fix

--- a/assets/sass/themes/defaultweb/shiptech.scss
+++ b/assets/sass/themes/defaultweb/shiptech.scss
@@ -24110,7 +24110,7 @@ mat-form-field {
 }
 
 .quoteByContainer{
-  cursor:pointer;width: 85px;height: 40px;
+  cursor:pointer;width: 104px;height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
